--- a/Schedule/Base.lproj/Main.storyboard
+++ b/Schedule/Base.lproj/Main.storyboard
@@ -496,44 +496,6 @@
                             <imageView userInteractionEnabled="NO" tag="819" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background1" translatesAutoresizingMaskIntoConstraints="NO" id="KCn-ze-LJf">
                                 <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                             </imageView>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="z1g-sy-CiZ">
-                                <rect key="frame" x="16" y="72" width="343" height="475"/>
-                                <color key="backgroundColor" red="0.80402845144271851" green="0.80392156862745101" blue="0.80392156862745101" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="zY1-HD-3DG">
-                                    <size key="itemSize" width="50" height="50"/>
-                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                </collectionViewFlowLayout>
-                                <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CalendarDayCell" id="0ur-Gc-pAX">
-                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" tag="618" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ib1-5F-jbF">
-                                                    <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                            </subviews>
-                                        </view>
-                                        <constraints>
-                                            <constraint firstItem="ib1-5F-jbF" firstAttribute="top" secondItem="0ur-Gc-pAX" secondAttribute="top" id="KnC-Y8-9Qh"/>
-                                            <constraint firstAttribute="trailing" secondItem="ib1-5F-jbF" secondAttribute="trailing" id="Nhg-ho-pf3"/>
-                                            <constraint firstAttribute="bottom" secondItem="ib1-5F-jbF" secondAttribute="bottom" id="VNu-fg-2Tm"/>
-                                            <constraint firstItem="ib1-5F-jbF" firstAttribute="leading" secondItem="0ur-Gc-pAX" secondAttribute="leading" id="klp-S7-a3P"/>
-                                        </constraints>
-                                    </collectionViewCell>
-                                </cells>
-                                <connections>
-                                    <outlet property="dataSource" destination="coS-90-xE6" id="Nag-Fb-Ccp"/>
-                                    <outlet property="delegate" destination="coS-90-xE6" id="SjJ-mS-Vdy"/>
-                                </connections>
-                            </collectionView>
                             <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YRr-8N-f4j">
                                 <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                                 <items>
@@ -551,20 +513,67 @@
                                     </navigationItem>
                                 </items>
                             </navigationBar>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DI1-bp-Mcv">
+                                <rect key="frame" x="16" y="93" width="343" height="316"/>
+                                <subviews>
+                                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="z1g-sy-CiZ">
+                                        <rect key="frame" x="0.0" y="0.0" width="343" height="316"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <color key="backgroundColor" red="0.80402845144271851" green="0.80392156862745101" blue="0.80392156862745101" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="zY1-HD-3DG">
+                                            <size key="itemSize" width="50" height="50"/>
+                                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                        </collectionViewFlowLayout>
+                                        <cells>
+                                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CalendarDayCell" id="0ur-Gc-pAX">
+                                                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                                    <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" tag="618" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ib1-5F-jbF">
+                                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                </view>
+                                                <constraints>
+                                                    <constraint firstItem="ib1-5F-jbF" firstAttribute="top" secondItem="0ur-Gc-pAX" secondAttribute="top" id="KnC-Y8-9Qh"/>
+                                                    <constraint firstAttribute="trailing" secondItem="ib1-5F-jbF" secondAttribute="trailing" id="Nhg-ho-pf3"/>
+                                                    <constraint firstAttribute="bottom" secondItem="ib1-5F-jbF" secondAttribute="bottom" id="VNu-fg-2Tm"/>
+                                                    <constraint firstItem="ib1-5F-jbF" firstAttribute="leading" secondItem="0ur-Gc-pAX" secondAttribute="leading" id="klp-S7-a3P"/>
+                                                </constraints>
+                                            </collectionViewCell>
+                                        </cells>
+                                        <connections>
+                                            <outlet property="dataSource" destination="coS-90-xE6" id="Nag-Fb-Ccp"/>
+                                            <outlet property="delegate" destination="coS-90-xE6" id="SjJ-mS-Vdy"/>
+                                        </connections>
+                                    </collectionView>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="316" id="zKM-by-UIX"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" red="0.97647064924240112" green="0.97647064924240112" blue="0.97647064924240112" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
                             <constraint firstItem="YRr-8N-f4j" firstAttribute="top" secondItem="hEl-KP-kAW" secondAttribute="top" id="6zq-CK-uXy"/>
-                            <constraint firstItem="z1g-sy-CiZ" firstAttribute="top" secondItem="YRr-8N-f4j" secondAttribute="bottom" constant="8" id="JYs-Ee-s4k"/>
+                            <constraint firstItem="DI1-bp-Mcv" firstAttribute="top" secondItem="YRr-8N-f4j" secondAttribute="bottom" constant="29" id="AyT-Ka-iM4"/>
                             <constraint firstItem="KCn-ze-LJf" firstAttribute="top" secondItem="YRr-8N-f4j" secondAttribute="bottom" id="QOZ-fY-ifA"/>
-                            <constraint firstItem="hEl-KP-kAW" firstAttribute="trailing" secondItem="z1g-sy-CiZ" secondAttribute="trailing" constant="16" id="R24-Ah-jde"/>
+                            <constraint firstItem="DI1-bp-Mcv" firstAttribute="leading" secondItem="hEl-KP-kAW" secondAttribute="leading" constant="16" id="S0H-M3-Jo8"/>
                             <constraint firstItem="YRr-8N-f4j" firstAttribute="trailing" secondItem="hEl-KP-kAW" secondAttribute="trailing" id="YTH-Cy-SjA"/>
-                            <constraint firstItem="hEl-KP-kAW" firstAttribute="bottom" secondItem="z1g-sy-CiZ" secondAttribute="bottom" constant="120" id="ctd-IT-g8F"/>
                             <constraint firstItem="YRr-8N-f4j" firstAttribute="leading" secondItem="cDp-Ps-SxO" secondAttribute="leading" id="dM3-55-onR"/>
                             <constraint firstItem="KCn-ze-LJf" firstAttribute="bottom" secondItem="cDp-Ps-SxO" secondAttribute="bottom" id="lSK-Jc-98H"/>
                             <constraint firstItem="KCn-ze-LJf" firstAttribute="trailing" secondItem="hEl-KP-kAW" secondAttribute="trailing" id="qiB-0X-Mfc"/>
                             <constraint firstItem="KCn-ze-LJf" firstAttribute="leading" secondItem="hEl-KP-kAW" secondAttribute="leading" id="rvX-RF-puL"/>
-                            <constraint firstItem="z1g-sy-CiZ" firstAttribute="leading" secondItem="hEl-KP-kAW" secondAttribute="leading" constant="16" id="yff-2z-9YL"/>
+                            <constraint firstItem="hEl-KP-kAW" firstAttribute="trailing" secondItem="DI1-bp-Mcv" secondAttribute="trailing" constant="16" id="yK6-eJ-j0T"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="hEl-KP-kAW"/>
                     </view>
